# TensorNVMe

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  requirements.txt  setup.py
.github/workflows/: build.yml  release.yml  release_test.yml
3rd/: CMakeLists.txt
benchmark/: benchmark_adam.py  benchmark_cpuadam.py
colo_nvme/: offload.py
colo_nvme/_C/: __init__.pyi
colo_nvme/cli/: check.py
csrc/: CMakeLists.txt  aio.cpp  aio.h  async_file_io.cpp  backend.cpp  offload.cpp  pthread_backend.cpp  py_api.cpp  space_mgr.cpp  space_mgr.h  threadpool.cpp  uring.cpp
csrc/include/: aio.h  asyncio.h  space_mgr.h  uring.h
docker/: Dockerfile
include/: aio.h  async_file_io.h  asyncio.h  backend.h  offload.h  pthread_backend.h  threadpool.h  threadpool.hpp  uring.h
tensornvme/: __init__.py  async_file_io.py  offload.py  safetensors.py
tensornvme/_C/: __init__.pyi
tensornvme/cli/: check.py  cli.py
tests/: CMakeLists.txt  catch.hpp  main.cpp  test_adam.py  test_aio.cpp  test_asyncio.cpp  test_cpuadam.py  test_disk_offloader.py  test_offload.cpp  test_offloader.py  test_optim.py  test_space_mgr.cpp  test_uring.cpp
